<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinalExamz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">RAWR DAMNIT!</string>
    <string name="toasty_button">DUN POKE ME!</string>
    <string name="toasty_button2">YOU HAVE FAILED.</string>
    <string name="checkz_box">Check me slave!</string>
    <string name="alertz">I haz an alert!</string>

</resources>
