<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />


    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/checkz_box" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <Button
        android:id="@+id/Toastyz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toasty_button" />
        
        <Button
        android:id="@+id/Toastyz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toasty_button2" />
        
        <Button
        android:id="@+id/Alertz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertz" />
        
    </LinearLayout>

</RelativeLayout>